feat(public, app): add images related, font, colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,22 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background-white: #fff;
+  --color-space-cadet: #1a2a59;
+  --color-dark-jungle-green: #222222;
+  --color-deep-saffron: #ff9933;
+  --color-white: #fff;
+  --color-black: #000;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-background-story: var(--background-white);
+  --font-roboto: var(--font-roboto);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--background-white);
+  font-family: var(--font-roboto);
 }
