feat(section): add story section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,16 @@
   --color-highlight-text: var(--color-deep-saffron);
 }
 
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
 body {
   background: var(--background-white);
   font-family: var(--font-roboto);
